--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: 
   cloud_firestore: 
+  material_design_icons_flutter: 4.0.5955
+  video_player: ^2.1.1
+  stream_chat_flutter: ^1.5.0
+
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
