--- a/web/manifest.json
+++ b/web/manifest.json
@@ -2,7 +2,7 @@
     "name": "afekaton_project",
     "short_name": "afekaton_project",
     "start_url": ".",
-    "display": "standalone",
+    "display": "fullscreen",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
     "description": "A new Flutter project.",
