--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ dependencies:
   firebase_core: 
   cloud_firestore: 
   material_design_icons_flutter: 4.0.5955
-  video_player: ^2.1.1
-  stream_chat_flutter: ^1.5.0
+  url_launcher:
+  webview_flutter: 
+  # webviewx: ^0.0.4
+
 
 
 dev_dependencies:
@@ -49,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    # - images/icons
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
